--- a/front-end/categoria-owme/project/css/style.scss
+++ b/front-end/categoria-owme/project/css/style.scss
@@ -8,5 +8,6 @@
 @import "component/general";
 
 //ESTRUCTURE
-@import "estructure/page";
-@import "estructure/responsive";
+@import "structure/fonts";
+@import "structure/page";
+@import "structure/responsive";
