--- a/front-end/categoria-owme/project/css/structure/_responsive.scss
+++ b/front-end/categoria-owme/project/css/structure/_responsive.scss
@@ -16,49 +16,76 @@
 
 @media #{$max-width-768} {
 
-  .open-menu:checked ~ .menu {
-    transform: translateX(0);
-  }
-  input[type=checkbox]{
-    display:none;
-  }
-  .open-menu:checked ~ .overlay {
-    display: block;
-  }
-  .abrir {
-    display: block;
-  }
-  .fechar {
-    display: none;
-  }
-  .open-menu:checked + label .abrir {
-    display: none;
-  }
-  .open-menu:checked + label .fechar {
-    display: block;
-  }
-  .menu {
-    position: fixed;
-    top: 40px;
-    left: 0;
-    height: 100%;
-    background: #ccc;
-    width: 320px;
-    transform: translateX(-100%);
-    transition: 0.5s;
-    z-index: 2;
-  }
-  .overlay {
-    position: fixed;
-    top: 40px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(#000, 0.5);
-    z-index: 1;
-    display: none;
-  }
+  #header {
 
+    .wrapper {
+
+      #menu-control, .action-menu{
+        display: block;
+      }
+
+      .open-menu:checked ~ .menu {
+        transform: translateX(0);
+      }
+
+      input[type=checkbox]{
+        display:none;
+      }
+
+      .open-menu:checked ~ .overlay {
+        display: block;
+      }
+
+      .abrir {
+        display: block;
+      }
+
+      .fechar {
+        display: none;
+      }
+
+      .open-menu:checked + label .abrir {
+        display: none;
+      }
+
+      .open-menu:checked + label .fechar {
+        display: block;
+      }
+
+      .menu {
+        position: fixed;
+        top: 40px;
+        left: 0;
+        height: 100%;
+        background: #ccc;
+        width: 320px;
+        transform: translateX(-100%);
+        transition: 0.5s;
+        z-index: 2;
+      }
+
+      .overlay {
+        position: fixed;
+        top: 40px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(#000, 0.5);
+        z-index: 1;
+        display: none;
+        z-index: 2;
+      }
+
+      .logotipo {
+          margin: 0 auto;
+      }
+
+      .find-access {
+        display: none;
+      }
+
+    }
+  }
   #products{
     ul#list-products{
       li{
