--- a/front-end/categoria-owme/project/css/helpers/_variables.scss
+++ b/front-end/categoria-owme/project/css/helpers/_variables.scss
@@ -31,6 +31,10 @@ $min-width-480:   "only screen and (max-width: 480px)";
 $min-width-360:   "only screen and (max-width: 360px)";
 
 /* CORES */
+$black: #000000;
 $gray: #333333;
+$gray2: #cccccc;
+$gray3: #a7a7a7;
 $green: #83A381;
-
+$white: #ffffff;
+$white2:#f1f1f1;
