--- a/front-end/categoria-owme/project/css/structure/_responsive.scss
+++ b/front-end/categoria-owme/project/css/structure/_responsive.scss
@@ -1,114 +1,193 @@
-
 @media #{$max-width-1024} {
-  #products{
-    ul#list-products{
-      li{
-          width: calc(100%/3);
-          transition: width 0.5s;
+  #products {
+    ul#list-products {
+      li {
+        width: calc(100% / 3);
+        transition: width 0.5s;
       }
     }
   }
 }
 
 @media #{$max-width-994} {
-
 }
 
 @media #{$max-width-768} {
-
   #header {
-
     .wrapper {
+      padding: 10px 5px;
 
-      #menu-control, .action-menu{
-        display: block;
-      }
-
-      .open-menu:checked ~ .menu {
+      .open-menu:checked ~ .nav-menu {
         transform: translateX(0);
       }
 
-      input[type=checkbox]{
-        display:none;
+      input[type="checkbox"] {
+        display: none;
       }
 
       .open-menu:checked ~ .overlay {
         display: block;
       }
+      .action-menu {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        width: 15px;
 
-      .abrir {
-        display: block;
-      }
+        .abrir,
+        .fechar {
+          background: $gray;
+          height: 2px;
+          position: relative;
+          transition: background 0.2s ease-out;
+          width: 100%;
+        }
 
-      .fechar {
-        display: none;
+        .abrir:before {
+          top: 5px;
+          width: 30px;
+        }
+
+        .abrir:after {
+          top: -5px;
+          width: 30px;
+        }
+
+        .abrir:before,
+        .abrir:after,
+        .fechar:before,
+        .fechar:after {
+          background: $gray;
+          content: "";
+          display: block;
+          height: 100%;
+          position: absolute;
+          left: 0;
+          transition: all 0.2s ease-out;
+          width: 100%;
+        }
+
+        .fechar:before {
+          transform: rotate(45deg);
+        }
+
+        .fechar:after {
+          transform: rotate(-45deg);
+        }
+
+        .abrir {
+          display: block;
+        }
+
+        .fechar {
+          display: none;
+        }
       }
 
       .open-menu:checked + label .abrir {
         display: none;
       }
 
-      .open-menu:checked + label .fechar {
-        display: block;
+      .open-menu:checked ~ .nav-menu .wrapper .action-menu {
+        position: absolute;
+        top: 15px;
+        right: -25px;
+
+        .fechar {
+          display: block;
+          background: transparent;
+          height: 4px;
+
+          &:after,
+          &:before {
+            background: $gray3;
+          }
+        }
       }
 
-      .menu {
+      .nav-menu {
         position: fixed;
         top: 40px;
         left: 0;
         height: 100%;
-        background: #ccc;
-        width: 320px;
+        background: $white2;
+        width: 265px;
         transform: translateX(-100%);
         transition: 0.5s;
         z-index: 2;
+        top: 0;
+        padding: 20px;
+
+        ul {
+          display: grid;
+          width: 100%;
+
+          li {
+            border-bottom: 1px solid #bebebe;
+            font-weight: bold;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            position: relative;
+            padding-left: 10px;
+
+            a{
+              padding: 15px 0;
+            }
+            &:last-child{
+              display: block;
+              border-bottom: none;
+            }
+          }
+        }
       }
 
       .overlay {
         position: fixed;
-        top: 40px;
+        top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(#000, 0.5);
+        background: rgba($black, 0.7);
         z-index: 1;
         display: none;
         z-index: 2;
       }
 
       .logotipo {
-          margin: 0 auto;
+        margin: 0 auto;
       }
 
       .find-access {
         display: none;
       }
-
     }
   }
-  #products{
-    ul#list-products{
-      li{
-          width: 50%;
-          margin-bottom: 20px;
-          transition: width 0.5s;
+  #products {
+    ul#list-products {
+      li {
+        width: 50%;
+        margin-bottom: 20px;
+        transition: width 0.5s;
 
-          .cont{
-            padding: 5px;
-          }
+        .cont {
+          padding: 5px;
+        }
       }
     }
 
-    #bg-loader{
+    #bg-loader {
       width: calc(100% - 10px);
       left: 5px;
     }
   }
+  #footer{
+    margin-bottom: 20px;
+  }
 }
 
 @media #{$max-width-480} {
-
 }
 @media #{$max-width-360} {
-
 }
